whatsapp alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ html {
 
 .WhatsApp {
   position: fixed;
+  right: 0px;
   bottom: 0px;
   width: 60px;
   height: 60px;
